# ud-testwork

./: README.md
udtw-client/: .env.example  README.md  package-lock.json  package.json
udtw-client/src/: App.js
udtw-client/src/components/: Loader.js  OrderInfoTableEntry.js  OrdersInfoChart.js  OrdersInfoTable.js  OrdersInfoTotalCostCounter.js  StatusBar.js
udtw-client/src/models/: OrderInfo.js
udtw-server/: .dockerfile  README.md  credentials.json  pyproject.toml
udtw-server/src/udtw/server/: application.py  env.py  exceptions.py  routes.py  services.py
udtw-tg-bot/: .dockerfile  README.md  pyproject.toml
udtw-tg-bot/src/udtw/tg/bot/: application.py  commands.py  env.py  models.py  services.py
